feat: configurações dos videos favoritos

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Micro Frontends Example</title>
+    <title>teste FrontEnd</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <iframe src="mf_drawer/index.html" title="MF_DRAWER"></iframe>
-    <iframe src="mf_videos/index.html" title="MF_VIDEOS"></iframe>
+    <iframe src="mf_videos/index.html" id="videos" title="MF_VIDEOS"></iframe>
 </body>
 </html>
