feat:funcionando a parte de favoritos

--- a/frontend/src/mf_videos/index.html
+++ b/frontend/src/mf_videos/index.html
@@ -15,7 +15,7 @@
 
         <div class="busca-videos">
             <h1>Busca de Vídeos do YouTube</h1>
-            <input type="text" id="searchQuery" placeholder="Pesquisar" onkeydown="searchVideos()">
+            <input type="text" id="searchQuery" placeholder="Pesquisar" onkeydown="searchVideos(false)">
             <div id="results"></div>
         </div>
     </div>
